--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@
       <td class="list-actions">
         <%= link_to 'Show', product %><br/>
         <%= link_to 'Edit', edit_product_path(product) %><br/>
-        <%= link_to 'Destroy', product, 
+        <%= link_to 'Delete', product, 
                     :confirm => 'Are you sure?',
                     :method => :delete %>
       </td>
